k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jokenation-ingress
  namespace: jokenation


spec:
  ingressClassName: nginx
  rules:
    - host: jokenation.local
      http:
        paths:
          # Auth service
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 9000

          # Gateway service
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8081

          # Quotes service
          - path: /quotes
            pathType: Prefix
            backend:
              service:
                name: quoteservice
                port:
                  number: 8082

          # Jokes service
          - path: /jokes
            pathType: Prefix
            backend:
              service:
                name: jokeservice
                port:
                  number: 8083
